k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-site
  namespace: keithhubner-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hugo-site
  template:
    metadata:
      labels:
        app: hugo-site
    spec:
      containers:
        - name: hugo-site
          image: ghcr.io/keithhubner/keithhubner.com/hugo-site:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: hugo-site-service
  namespace: keithhubner-blog  
spec:
  selector:
    app: hugo-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
